@@ -226,9 +226,6 @@
    one supplied by Python itself. (see Include/unicodectype.h). */
 #undef WANT_WCTYPE_FUNCTIONS
 
-/* Define if you want to read files with foreign newlines. */
-#define WITH_UNIVERSAL_NEWLINES 1
-
 /* Define if you want documentation strings in extension modules */
 #define WITH_DOC_STRINGS 1
 
